compiler/tools/fpp-check/test/component/enum_default_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/enum_default_error.fpp: 2.27
  enum E { X, Y } default "abc"
                          ^
error: cannot convert string to enum E
